--- a/小白上传代码.md
+++ b/小白上传代码.md
@@ -1,35 +1,15 @@
-# 小白上传代码
+# 小白上传代码到github
 
-#### 1.Fork该项目
+第一步：
+打开我们的项目，此时项目中是没有 .git 文件的
+项目文件夹里面【鼠标右击】弹出菜单
+在【鼠标右击】弹出的菜单中，点击【Git Bash Here】
 
-#### 2.提交
+2、在命令窗口中输入：git init
 
-下载Git Bash
-
-进入到要存放的文件夹，然后在该文件夹打开Git Bash，通过clone，下载该项目。
-
-git clone 会自动远程连接本地和github
-
-```
-git clone SSH地址
-```
-
-如果已经clone过，则通过pull拉取就行
-
-```
-git pull origin 分支名
-```
-
-然后往这个文件夹进行改动以后，
-
-```
-git add 文件
-git commit -m '备注信息'
-```
-
-此时只是提交到了本机的仓库，还得连接github上的仓库通知改动
-
-```
-git push orgin main或master
-```
-
+3、复制仓库的地址
+4、git remote add origin 仓库的地址
+5、git pull origin master
+6、git add .
+7、git commit -m “提交项目” %可以修改
+8、git push origin master
