--- a/小白上传代码.md
+++ b/小白上传代码.md
@@ -12,4 +12,5 @@
 5、git pull origin master
 6、git add .
 7、git commit -m “提交项目” %可以修改
-8、git push origin master
+8、git push origin master   /git push origin main
+ 
