--- a/小白上传代码.md
+++ b/小白上传代码.md
@@ -9,7 +9,7 @@
 
 3、复制仓库的地址
 4、git remote add origin 仓库的地址
-5、git pull origin master
+5、git pull origin master 如果有多个分支 git pull --rebase origin xxx (xxx是你要设置的默认分支，你这次要提交代码上去的分支名称，必须要有哦）
 6、git add .
 7、git commit -m “提交项目” %可以修改
 8、git push origin master   /git push origin main
